views/stylesheets/_application.scss
/* ... */
/* @end */

/* @group homepage */

.page-homepage{
  .strapline{
    margin-top: $baseline*3;
    text-align: center;
  }

  .row:nth-child(2){
    margin-bottom: $baseline*2;
  }

  .slideshow{
    @include box-sizing(border-box);

    .slides_container {
      height: $baseline*18;
    }

    h1{
      color: white;
      margin: $baseline*6 9.5%;
    }
    .slide1,.slide2,.slide3,.slide4,.slide5,.slide6{
      height: $baseline*18;
      width: 100%;
    }
    .slide1{
      background-color: $pink;
    }
    .slide2{
      background-color: $green;
    }
    .slide3{
      background-color: $orange;
    }
    .slide4{
      background-color: $aqua;
    }
    .slide5{
      background-color: $purple;
    }
    .slide6{
      background-color: $blue;
    }
    .pagination{
      width: 132px;
      margin: $baseline auto;
      li a{
        float: left;
        color: transparent;
        width: 12px;
        height: 12px;
        margin-left:10px;
        border: 6px solid $pink;

        @include box-sizing(border-box);
        @include border-radius(10px);
      }

      .current a{
        border-width: 3px;
      }

      li:nth-child(2) a{
        border-color: $green;
      }
      li:nth-child(3) a{
        border-color: $orange;
      }
      li:nth-child(4) a{
        border-color: $aqua;
      }
      li:nth-child(5) a{
        border-color: $purple;
      }
      li:nth-child(6) a{
        border-color: $blue;
      }
    }
  }

  .columns2{
    h2{
      margin-bottom: $baseline;
    }

    a{
      margin-top: -$baseline;
      display: block;
    }

    .blog-snipet{
      margin-bottom: $baseline*2;
    }
  }
}
/* @end */

/* @group work */

.page-work{

  .row:first-child{
    margin-bottom: $baseline*2;
    .columns3{
      margin-top: $baseline*3;
    }
    p{
      padding-top: $baseline*3;
    }
  }

  .case-study{

    hr{
      margin-bottom: $baseline*2;
    }
    .row{
      margin-bottom: $baseline;
    }
    .img{
      width: 100%;
      height: $baseline*8;
    }
    h3{
      margin-bottom: $baseline;
    }
  }
}
/* @end */

/* @group products */

.page-products{

  .row:first-child{
    .columns6{
      margin-top: $baseline*3;
    }
  }

  .row:nth-child(2){
    margin-bottom: $baseline*2;
  }

  .tricklr, .vistazo{
    .img{
      width: 100%;
      height: $baseline*9;
      background-color: $pink;
    }
  }

  .vistazo{
    .img{
      background-color: $blue;
    }
  }

  h2{
    margin-top: $baseline*2;
    margin-bottom: $baseline;
  }

  hr{
    margin-bottom: $baseline*2;
  }

  .open-source{
    p{
      margin-top: $baseline*2;
      margin-bottom: 0;
    }
  }
}

/* @end */

/* @group people */

.page-people{
  .people-img{
    .columns6{
      margin-top: $baseline*3;
      .img{
        width: 100%;
        height: $baseline*12;
      }
    }
  }
  .people-copy{
    margin-bottom: 0; // Spacing in h1, instead of here (for # linking)
  }
  #spotlight{
    .row:first-child{
      margin-bottom: $baseline;
    }
    .row:nth-child(3){
      margin-bottom: $baseline;
    }
    .person-row{
      display: none;
      &.active{
        display: block;
      }
    }
    hr{
      margin-bottom: $baseline;
    }
    .img{
      width: 100%;
      height: $baseline*12;
      text-align: center;
    }
    h1 {
      margin-top: $baseline*2;
    }
    h3{
      margin-bottom: $baseline;
    }
    .link{
      margin-bottom: 0;
    }
  }

  .employees{
    .row:first-child,
    .row:nth-child(3){
      margin-bottom: $baseline;
    }
    hr{
      margin-bottom: $baseline;
    }
    li:first-child .person,
    li:nth-child(7) .person {
      margin-left: 0;
    }
    .person{
      display: block;
      margin-bottom: $baseline;
      margin-left: $column-gutter;
      // Need this for when names go over 2 lines
      min-height: $baseline*10;
      &:hover {
        text-decoration: none;
      }
      .img{
        width: 100%;
        height: $baseline*5;
        margin-bottom: 7px;
        text-align: center;
      }
      h4 {
        // font-size: 14px;
      }
      p{
        margin-bottom: -5px;
        // font-size: 12px;
      }
    }
  }
}

/* @end */

/* @group thoughts */

.page-thoughts{
  #thoughts-heading{
    margin-top: $baseline*3;
  }
  hr{
    margin-bottom: $baseline*2;
  }
  .blog-post{
    ol, ul {
      margin-bottom: 1.5em;
      list-style: disc;
      margin-left: 1.5em;
    }
    .img{
      width: 100%;
      height: $baseline*11;
    }
    .frame{
      margin-bottom: $baseline;
    }
    .heading{
      margin-bottom: $baseline;
    }
    .blog-content{
      border-bottom-style: dashed;
      border-bottom-width: 1px;
      padding-bottom: $baseline;
    }
    .blog-sidebar{
      margin-top: $baseline*3;
      p{
        margin-bottom: 0;
      }
      .tags{
        margin-top: $baseline;
        list-style: none;
        margin-left: 0;
        a{
          font-weight: 400;
          display: block;
        }
        li a:after {
          content: ",";
        }
        li:last-child a:after {
          content: "";
        }
      }
      .comments{
        a {
          color: hsl(40, 70%, 98.5%);  
          display: block;
          background-image: url('/images/comment.png');
          width: 20px;
          height: 26px;
          margin-top: 10px;
          padding: 4px 12px 6px;
          display: inline-block;
          font-weight: bold;
          letter-spacing: 1px;
          text-align: center;
        }
      }
    }
    .comments-wrapper {
      @extend .columns4;
    } // .comments-wrapper

    .share-this-wrapper {
      clear: both;
    }
  } // .blog-post

  #blog-navigation {
    @extend .columns4;
    margin: 60px 0 0 0;

    li {
      width: 50%;
    }

    .prev {
      float: left;
    }

    .next {
      float: right;
      text-align: right;
    }
  }
}
/* ... */

